# canvas-mastery-toolkit

./: .env.example  .gitignore  accommodations.py  config.m  config.py  docs.md  export.py  grading.py  launch.py  pyproject.toml  quiz_generator.m  quiz_generator.py  readme.md  requirements.txt  revisions.py  rubrics.py
+quizzes/: BlanksQuestion.m  DropdownsQuestion.m  FillAnswer.m  Generator.m  MatchingAnswer.m  MatchingQuestion.m  MultipleAnswersAnswer.m  MultipleAnswersQuestion.m  MultipleChoiceQuestion.m  NumericalAnswer.m  NumericalQuestion.m  Question.m  build_paths.m  pad_char_array.m
canvas/: __init__.py  app.py  bullet.py  canvasquizgrader.py  canvasquizreviser.py  canvasquizscheduler.py  cli.py  configcourse.py  configmanager.py  console.py  coursemanager.py  grader.py  gradescopeexamgrader.py  gradescopeexamreviser.py  gradescopemultiquizreviser.py  gradescopequizgrader.py  gradescopequizreviser.py  gradingmanager.py  styles.py
docs/: quiz_generation.md
examples/: quiz_generation.m
matlab/: BlanksQuestion.m  CanvasQuizGenerator.m  DropdownsAnswer.m  DropdownsQuestion.m  FillAnswer.m  MatchingAnswer.m  MatchingQuestion.m  MultipleAnswersAnswer.m  MultipleAnswersQuestion.m  MultipleChoiceQuestion.m  NumericalAnswer.m  NumericalQuestion.m  Question.m  config.m
