[project]
name = "canvas-mastery-toolkit"
version = "0.0.1"
authors = [
    {name = "SynthGhost"},
]
description = "A toolkit to support implementations of the learning mastery gradebook on Canvas."
readme = "readme.md"
requires-python = ">=3.8"
dependencies = [
    "bullet==2.2.0",
    "canvasapi==3.2.0",
    "click==8.1.7",
    "console-menu==0.8.0",
    "keyring==24.2.0",
    "numpy==1.26.3",
    "pandas==2.1.1",
    "python-dateutil==2.8.2",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["canvas"]

[project.scripts]
canvas = "canvas.console:cli"
